--- a/chart/templates/metrics-server.yaml
+++ b/chart/templates/metrics-server.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: metrics-server
-  namespace: argocd
+  namespace: kube-metrics-server
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
