--- a/chart/templates/karpenter.yaml
+++ b/chart/templates/karpenter.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: karpenter
-  namespace: argocd
+  namespace: kube-argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
@@ -27,7 +27,7 @@ spec:
           value: {{ .Values.karpenter.awsDefaultInstanceProfile }}
   destination:
     server: https://kubernetes.default.svc
-    namespace: karpenter
+    namespace: kube-karpenter
   syncPolicy:
     automated:
       prune: true
