--- a/chart/templates/karpenter.yaml
+++ b/chart/templates/karpenter.yaml
@@ -37,4 +37,13 @@ spec:
         duration: 5s
         factor: 2
         maxDuration: 1m
+   ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: argo-demo
+data:
+  # property-like keys; each key maps to a simple value
+  player_initial_lives: "3"
+  ui_properties_file_name: "user-interface.properties"
   {{- end -}}
