--- a/chart/templates/karpenter.yaml
+++ b/chart/templates/karpenter.yaml
@@ -41,8 +41,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: argo-demo
-data:
+  name: kube-karpenter
   # property-like keys; each key maps to a simple value
   player_initial_lives: "3"
   ui_properties_file_name: "user-interface.properties"
