--- a/chart/templates/karpenter.yaml
+++ b/chart/templates/karpenter.yaml
@@ -43,6 +43,7 @@ kind: ConfigMap
 metadata:
   name: kube-karpenter
   # property-like keys; each key maps to a simple value
+data:
   player_initial_lives: "3"
   ui_properties_file_name: "user-interface.properties"
   {{- end -}}
