--- a/add-ons/vault/values.yaml
+++ b/add-ons/vault/values.yaml
@@ -2,3 +2,12 @@
 # https://github.com/hashicorp/vault-helm/blob/main/values.yaml
 ui:
   enabled: true
+
+volumes:
+  - name: plugins
+    persistentVolumeClaim:
+      claimName: ebs-claim
+volumeMounts:
+  - mountPath: /etc/vault/vault_plugins
+    name: plugins
+    readOnly: true
